Fixed some align problems

--- a/Stylesheets/listToDo.css
+++ b/Stylesheets/listToDo.css
@@ -85,6 +85,7 @@ input {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: baseline;
 }
 
 ul li {
@@ -92,6 +93,7 @@ ul li {
     font-size: 17px;
     padding: 12px 8px 12px 50px;
     user-select: none;
+    align-content: center;
     cursor: pointer;
     position: relative;
 }
@@ -105,7 +107,8 @@ ul li::before {
     background-color: rgb(255, 0, 0);
     background-size: cover;
     background-position: center;
-    top: 12px;
+    text-align: center;
+    top: 0.52rem;
     left: 8px;
 }
 
@@ -116,17 +119,16 @@ ul li.checked {
 
 ul li.checked::before {
     background-color: rgb(0, 228, 0);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
+    text-align: center;
+    top: 0.55rem;
     content: "✓";
+    align-content: center;
 }
 
 ul>li>span {
     position: absolute;
     right: 0;
-    top: 5px;
+    top: 2px;
     width: 40px;
     height: 40px;
     font-size: 22px;
